--- a/projeto_musica/src/index.css
+++ b/projeto_musica/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --cor1: #8A4421;
+  --cor2: #ED9247;
+  --cor3: #7F4E26;
+  --cor4: #C3783A;
+  
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +13,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
