--- a/projeto_musica/src/App.css
+++ b/projeto_musica/src/App.css
@@ -13,8 +13,10 @@
   }
 }
 
+
+
 .App-header {
-  background-color: #282c34;
+  background-color: var(--cor3);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
